{WIP} hack broken run-java.sh